src/App.css
@import url("./variables.css");
@import url("./animations.css");

* {
  box-sizing: border-box;
  font-family: "Grandstander", cursive;
}

body {
  background-color: #1f242d !important;
  color: white !important;
}

.app {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.section {
  flex-grow: 1;
}

@media screen and (min-width: 768px) {
  .slide-out {
    animation: slideOut 0.8s ease forwards;
  }
}

@media screen and (max-width: 768px) {
  .slide-out {
    animation: slideOutMobile 0.8s ease forwards !important;
  }
}

